--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,13 +3,11 @@
   <%= link_to image_tag("logo_loupe.png", class: "navbar-wagon-brand"),
   root_path %>
 
-
-
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <%= link_to "New filters", new_filter_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">My movies</a>
+    <%= link_to "My movies", my_movies_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
@@ -26,20 +24,22 @@
   </div>
 
   <!-- Dropdown appearing on mobile only -->
+  <div class="tog-menu hidden-md hidden-lg">
+    <a href="" class="toggle-menu"><span></span></a>
+  </div>
 
-
-
-      <div class="tog-menu hidden-md hidden-lg">
-        <a href="" class="toggle-menu"><span></span></a>
-      </div>
-
-      <div class="hidden-menu">
-        <ul>
-          <li><%= link_to "My preferences", new_filter_path %></li>
-          <li><%= link_to "My movies", my_movies_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+  <div class="hidden-menu">
+    <ul>
+      <li class="dropdown">
+        <a href="#" data-toggle="dropdown">My movies</a>
+        <ul class="dropdown-menu">
+          <li><%= link_to "Wishes", my_movies_path %></li>
+          <li><%= link_to "Seen", seen_my_movies_path %></li>
         </ul>
-      </div>
-
+        <li><%= link_to "My preferences", new_filter_path %></li>
+        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+      </li>
+    </ul>
+  </div>
 </div>
 
