call api allociné for moviecode and GET movie showtime list

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -108,6 +108,10 @@
   margin-left: 10px;
   position: relative;
   z-index: 9999;
+
+  :hover {
+    text-underline: none;
+  }
 }
 
 .hidden-menu {
