--- a/app/views/trailers/_youtube_iframe.html.erb
+++ b/app/views/trailers/_youtube_iframe.html.erb
@@ -1,1 +1,1 @@
-<iframe width="100%" height="200" src="https://www.youtube.com/embed/<%= youtube_key %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="100%" height="200" src="https://www.youtube.com/embed/<%= youtube_key %>?rel=0&amp;controls=0&amp;showinfo=0" allow="autoplay; encrypted-media" allowfullscreen frameborder="0"></iframe>
