--- a/app/views/my/movies/seen_index.html.erb
+++ b/app/views/my/movies/seen_index.html.erb
@@ -3,8 +3,7 @@
     <% @movies.each do |movie| %>
       <div class="col-xs-6">
         <div class="card">
-          <div class="movie-poster">
-            <%= tmdb_image_tag("#{movie.poster}", style: "width: 100%; height: 100%;") %>
+          <div class="movie-poster" style="background-image: url(<%= tmdb_image_path(movie.poster) %>)">
           </div>
           <div class="movie-title">
             <%= movie.title %>
