--- a/app/assets/stylesheets/components/_mm-tabs.scss
+++ b/app/assets/stylesheets/components/_mm-tabs.scss
@@ -7,13 +7,14 @@
 
   & > li {
     flex: 1;
-    background: #CCC;
-    border-top: 3px solid #CCC;
-    box-shadow: inset 0 -4px 10px rgba(black, 0.2);
+    background: #7A7D7D;
+    border-top: 3px solid #7A7D7D;
+    box-shadow: inset 3px -4px 10px rgba(black, 0.2);
     text-align: center;
+    border-radius: 3px;
 
     a {
-      color: black;
+      color: rgb(20, 20, 20);
       text-decoration: none;
       display: block;
       padding: 10px 0;
@@ -24,7 +25,7 @@
       border-top: 3px solid $red-btn;
       box-shadow: none;
       a {
-        color: white;
+        color: rgb(200, 200, 200);
       }
     }
   }
