--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <%= link_to image_tag("logo_loupe.png", class: "navbar-wagon-brand"),
+  <%= link_to image_tag("camera-logo.png", class: "navbar-wagon-brand"),
   root_path %>
 
   <!-- Right Navigation -->
