--- a/app/views/my/movies/index.html.erb
+++ b/app/views/my/movies/index.html.erb
@@ -8,11 +8,11 @@
   </ul>
 
   <!-- Tab panes -->
-  <div class="tab-content">
+  <div class="tab-content container-fluid">
     <div role="tabpanel" class="tab-pane active" id="watchlist">
       <div class="row">
         <% @movies.each do |movie| %>
-        <div class="col-xs-6">
+        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
           <div class="card">
             <div class="movie-poster" style="background-image: url(<%= tmdb_image_path(movie.poster) %>)"></div>
             <div class="movie-title">
