added a margin bottom to the save filter button

--- a/app/views/filters/new.html.erb
+++ b/app/views/filters/new.html.erb
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="col-xs-8 col-xs-offset-2">
-      <%= f.button :submit, class: "btn btn-block" %>
+      <%= f.button :submit, class: "btn btn-block btn-save-margin" %>
     </div>
   <% end %>
 </div>
