added a modal for the showtime list when click like

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -4,3 +4,8 @@
   background-color: rgba(50, 50, 50, 0.5);
 }
 
+.showtime-modal {
+  background-color: rgba(50, 50, 50, 0.5);
+  height: 100vh;
+  width: 100vh;
+}
