--- a/app/views/trailers/_trailer.html.erb
+++ b/app/views/trailers/_trailer.html.erb
@@ -19,3 +19,28 @@
   </div>
 
 </div>
+
+<% if @movie != nil && @movie.status == "In theaters" && @allocine_movie_parsed["feed"]["movie"] != nil && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
+  <div class="showtime-modal">
+    <%= link_to "x", trailers_path, class: "button-quit" %>
+    <% if @movie.status == "In theaters" && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
+        <% @theaters_showtimes.each do |theater_showtimes|%>
+          <p> <%= theater_showtimes["place"]["theater"]["name"]%> -
+          <%= theater_showtimes["place"]["theater"]["distance"]%>km
+          <p>
+            <% theater_showtimes["movieShowtimes"].each do |movie_showtime| %>
+              <% movie_showtime["scr"].each do |screen| %>
+                <% screen["t"].each do |hour|%>
+                  <% content = "#{hour["$"]} - #{movie_showtime["version"]["original"] == "true" ? "VO" : "VF"}" %>
+                  <% url = movie_showtime["ticketing"] %>
+                  <%= link_to content, url %>
+                <% end %>
+              <% end %>
+            <% end %>
+          </p>
+          <hr>
+        <% end %>
+      <% end %>
+    <%= link_to "", trailers_path, class: "mm-modal-quit" %>
+  </div>
+<% end %>
