--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,11 +1,11 @@
-.modal {
-  height: 100vh;
-  width: 100vh;
-  background-color: rgba(50, 50, 50, 0.5);
-}
-
 .showtime-modal {
-  background-color: rgba(50, 50, 50, 0.5);
-  height: 100vh;
-  width: 100vh;
+  background-color: white;
+  border-radius: 3px;
+  padding: 0 20px;
+  position: absolute;
+  z-index: 20;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
 }
