bordershadow on dropdown menu

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -122,6 +122,9 @@
   right: 0px;
   top: 70px;
   background: #33363B;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  box-shadow: 0px 2px 0px rgba(50,50,50,0.95) ;
 
 
   ul {
