--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
     <%= render "layouts/navbar" %>
 
+
     <% if notice %>
       <p class="notice"><%= notice %></p>
     <% end %>
@@ -23,5 +24,7 @@
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
+    <%= render "layouts/geo_cookie" %>
+
   </body>
 </html>
