--- a/app/views/layouts/_geo_cookie.html.erb
+++ b/app/views/layouts/_geo_cookie.html.erb
@@ -27,7 +27,7 @@
       expires = "; expires=" + date.toUTCString();
 
 
-      document.cookie = name + "=" + value + expires + ";";
+      document.cookie = name + "=" + value + expires + "; path=/;";
     });
   }
 
