Backdrop is back on mymoviesshow

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,5 +1,5 @@
 .showtime-modal {
-  background-color: white;
+  background-color: rgba(10,10,20,0.9);
   border-radius: 3px;
   padding: 0 20px;
   position: absolute;
