--- a/app/views/my/movies/show.html.erb
+++ b/app/views/my/movies/show.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="backdrop">
-  <div class="backdrop-img" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('<%= "https://image.tmdb.org/t/p/w500/#{@movie['backdrop_path']}" %>')"></div>
+  <div class="backdrop-img" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('<%= "https://image.tmdb.org/t/p/w500/#{@movie_tmdb['backdrop_path']}" %>')"></div>
   <div class="container-fluid backdrop-content">
     <div class="row">
       <div class="poster col-xs-6">
