--- a/app/assets/stylesheets/pages/_trailers.scss
+++ b/app/assets/stylesheets/pages/_trailers.scss
@@ -1,3 +1,3 @@
 body {
-  background: radial-gradient(rgba(57, 57, 57, 0.9), $grey-background);
+  background: radial-gradient(#34363C, $grey-background);
 }
