--- a/app/views/trailers/_trailer.html.erb
+++ b/app/views/trailers/_trailer.html.erb
@@ -1,6 +1,6 @@
 <% if @movie != nil && @movie.status == "In theaters" && @allocine_movie_parsed["feed"]["movie"] != nil && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
   <div class="showtime-modal">
-    <%= link_to "x", trailers_path, class: "" %>
+     <a href="#" class="showtime-modal-close">x</a>
     <% if @movie.status == "In theaters" && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
       <h3><%= @movie.title %></h3>
         <% @theaters_showtimes.each do |theater_showtimes|%>
@@ -12,7 +12,7 @@
                 <% screen["t"].each do |hour|%>
                   <% content = "#{hour["$"]} - #{movie_showtime["version"]["original"] == "true" ? "VO" : "VF"}" %>
                   <% url = hour["tk"] %>
-                  <%= link_to content, url %>
+                  <%= link_to content, url, target: "_blank" %>
                 <% end %>
               <% end %>
             <% end %>
@@ -22,6 +22,20 @@
       <% end %>
     <%= link_to "", trailers_path, class: "" %>
   </div>
+  <script>
+    var close = document.querySelector('.showtime-modal-close');
+    var showtimeModal = document.querySelector(".showtime-modal");
+    if (close) {
+      close.addEventListener('click', function() {
+        showtimeModal.remove();
+      });
+    }
+    document.addEventListener('click', function(event) {
+      if (event.target !== showtimeModal) {
+        showtimeModal.remove();
+      }
+    })
+  </script>
 <% end %>
 
 <div class="item <%= "active" if active %>">
