--- a/app/views/trailers/_trailer.html.erb
+++ b/app/views/trailers/_trailer.html.erb
@@ -1,29 +1,27 @@
-<% if @movie != nil && @movie.status == "In theaters" && @allocine_movie_parsed["feed"]["movie"] != nil && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
+<% if @movie != nil && @movie.status == "In theaters" && @opinion.value == true && @allocine_movie_parsed["feed"]["movie"] != nil && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
   <div class="showtime-modal">
-     <a href="#" class="showtime-modal-close">x</a>
-    <% if @movie.status == "In theaters" && @theaters_showtimes_parsed["feed"]["totalResults"] != 0 %>
-      <h3><%= @movie.title %></h3>
-        <% @theaters_showtimes.each do |theater_showtimes|%>
-          <p> <%= theater_showtimes["place"]["theater"]["name"]%> -
-          <%= theater_showtimes["place"]["theater"]["distance"]%>km
-          <p>
-            <% theater_showtimes["movieShowtimes"].each do |movie_showtime| %>
-              <% movie_showtime["scr"].each do |screen| %>
-                <% screen["t"].each do |hour|%>
-                  <% content = "#{hour["$"]} - #{movie_showtime["version"]["original"] == "true" ? "VO" : "VF"}" %>
-                  <% url = hour["tk"] %>
-                  <% if url.nil? %>
-                    <%= content %>
-                  <% else %>
-                    <%= link_to content, url, target: "_blank" %>
-                  <% end %>
-                <% end %>
+    <a href="#" class="showtime-modal-close">x</a>
+    <h3><%= @movie.title %></h3>
+    <% @theaters_showtimes.each do |theater_showtimes|%>
+      <p> <%= theater_showtimes["place"]["theater"]["name"]%> -
+      <%= theater_showtimes["place"]["theater"]["distance"]%>km
+      <p>
+        <% theater_showtimes["movieShowtimes"].each do |movie_showtime| %>
+          <% movie_showtime["scr"].each do |screen| %>
+            <% screen["t"].each do |hour|%>
+              <% content = "#{hour["$"]} - #{movie_showtime["version"]["original"] == "true" ? "VO" : "VF"}" %>
+              <% url = hour["tk"] %>
+              <% if url.nil? %>
+                <%= content %>
+              <% else %>
+                <%= link_to content, url, target: "_blank" %>
               <% end %>
             <% end %>
-          </p>
-          <hr>
+          <% end %>
         <% end %>
-      <% end %>
+      </p>
+      <hr>
+    <% end %>
     <%= link_to "", trailers_path, class: "" %>
   </div>
   <script>
@@ -42,10 +40,10 @@
   </script>
 <% end %>
 
-<div class="container-fluid item <%= "active" if active %>">
+<div class="item <%= "active" if active %>">
   <% key = trailer.dig('videos', 'results').try(:first).try(:dig, 'key') %>
   <% if key.present? %>
-    <%= render "trailers/youtube_iframe", class: "video", youtube_key: key %>
+    <%= render "trailers/youtube_iframe", youtube_key: key %>
   <% end %>
   <%= trailer['title'] %>
   <div class="buttons-like-dislike">
