--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta name="apple-mobile-web-app-title" content="Movie Match" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+
     <%= favicon_link_tag %>
     <title>Movie Match, find the movie you want to see</title>
     <meta name="description" content="<%= meta_description %>">
@@ -30,7 +35,7 @@
   <body class="<%= yield(:body_class) %>">
 
     <%= render "layouts/navbar" %>
-    
+
     <% if alert %>
       <p class="alert"><%= alert %></p>
     <% end %>
@@ -39,6 +44,30 @@
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
     <%= render "layouts/geo_cookie" %>
+
+
+    <script> if(("standalone" in window.navigator) && window.navigator.standalone){
+
+      // If you want to prevent remote links in standalone web apps opening Mobile Safari, change 'remotes' to true
+      var noddy, remotes = false;
+
+      document.addEventListener('click', function(event) {
+
+        noddy = event.target;
+
+        // Bubble up until we hit link or top HTML element. Warning: BODY element is not compulsory so better to stop on HTML
+        while(noddy.nodeName !== "A" && noddy.nodeName !== "HTML") {
+              noddy = noddy.parentNode;
+          }
+
+        if('href' in noddy && noddy.href.indexOf('http') !== -1 && (noddy.href.indexOf(document.location.host) !== -1 || remotes))
+        {
+          event.preventDefault();
+          document.location.href = noddy.href;
+        }
+
+      },false);
+    }</script>
 
   </body>
 </html>
